Terraform-basics-learning/sg-variable.tf
resource "aws_security_group" "demo_var" {
  name        = "demo_var"

ingress {
  description  = "TLC from VPC"
  from_port    = 443
  to_port      = 443
  protocol     = "tcp"
  cidr_blocks  = [var.client_ip]
}

ingress {
  description  = "TLC from VPC"
  from_port    = 80
  to_port      = 80
  protocol     = "tcp"
  cidr_blocks  = [var.client_ip]
}

ingress {
  description  = "TLC from VPC"
  from_port    = 22
  to_port      = 22
  protocol     = "tcp"
  cidr_blocks  = [var.client_ip]
 }

}
