Terraform-basics-learning/sg.tf
resource "aws_security_group" "demo_var" {
  name        = "demo_var"

ingress {
  description  = "TLC from VPC"
  from_port    = 443
  to_port      = 443
  protocol     = "tcp"
  cidr_blocks  = ["10.20.30.40/32"]
}

ingress {
  description  = "TLC from VPC"
  from_port    = 80
  to_port      = 80
  protocol     = "tcp"
  cidr_blocks  = ["10.20.30.40/32"]
}

ingress {
  description  = "TLC from VPC"
  from_port    = 22
  to_port      = 22
  protocol     = "tcp"
  cidr_blocks  = ["10.20.30.40/32"]
 }

}
